# claude-session-manager

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  release.yml
claude_session_manager/: __init__.py  app.py  dialogs.py  formatting.py  models.py  prefs.py  sessions.py  sidebar.py  store.py  terminal.py  themes.py  window.py
claude_session_manager/locale/de/LC_MESSAGES/: claude-session-manager.mo
claude_session_manager/locale/es/LC_MESSAGES/: claude-session-manager.mo
claude_session_manager/locale/fr/LC_MESSAGES/: claude-session-manager.mo
claude_session_manager/locale/hu/LC_MESSAGES/: claude-session-manager.mo
data/: eu.zengo.ClaudeSessionManager.metainfo.xml  install.sh  io.github.r4nd3l.ClaudeSessionManager.desktop  io.github.r4nd3l.ClaudeSessionManager.metainfo.xml
debian/: changelog  control
debian/source/: options
docs/: index.md  package-lock.json  package.json  releases.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/guide/: features.md  getting-started.md  how-it-works.md  introduction.md  keyboard-shortcuts.md
packaging/: README.md
packaging/aur/: .SRCINFO  PKGBUILD
po/: claude-session-manager.pot  de.po  es.po  fr.po  generate.py  hu.po
scripts/: build_deb.sh  make_demo_data.py
tests/: test_sessions.py
